<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TodoRFVJ</string>
    <string name="hello_world">Hello world!</string>
    <string name="bye_world">Bye World</string>
    <string name="label">Label</string>
    <string name="button_add_text">Add</string>
    <string name="button_save_text">Save</string>
    <string name="button_del_text">Del</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="title_activity_edit">EditActivity</string>

    <string name="TextView_label">Label</string>
    <string name="TextView_content">Description</string>
    <string name="TextView_reminder">Reminder : </string>
    <string name="TextView_tags">Tags</string>
    <string name="Button_changeReminder">Remind me</string>
</resources>
